--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@patternfly/react-core": "^4.6.1",
+    "@patternfly/react-core": "3.158.2",
     "@patternfly/react-icons": "^4.1.1",
     "@patternfly/react-styles": "^4.1.1",
     "@patternfly/react-table": "^2.28.47",
